--- a/views/layouts/explorer.ejs
+++ b/views/layouts/explorer.ejs
@@ -29,7 +29,7 @@
         </div>
     </nav>
 
-    <main class="section" style="padding: 0">
+    <main class="section">
         <%- body %>
     </main>
 
