--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -38,10 +38,10 @@
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/dependencies/jquery.min.js"></script>
     <script src="/js/dependencies/lodash.min.js"></script>
-    <script src="/js/initMindmapEditor.js"></script>
-    <script src="/js/material.min.js"></script>
-    <script src="/js/materialize.min.js"></script>
+    <script src="/js/dependencies/materialize.min.js"></script>
+    <script src="/js/initMaterialize.js"></script>
     <!--SCRIPTS END-->
 
 </head>
