--- a/assets/styles/importer.scss
+++ b/assets/styles/importer.scss
@@ -14,17 +14,18 @@
  * or any other Grunt tasks you like.)
  */
 
-@import "../../node_modules/material-design-lite/src/material-design-lite";
-@import "flaticon.css";
+@import "../../node_modules/materialize-css/sass/materialize";
 
-@import "sass/base/header";
-@import "sass/base/content";
-@import "sass/base/footer";
-@import "sass/base/panel";
+@import "sass/misc/flaticon";
+@import "sass/misc/material_icons";
+@import "sass/misc/materialize_fixes";
+
+@import "sass/base/base";
+@import "sass/base/navigation";
 @import "sass/base/buttons";
-@import "sass/base/typography";
-@import "sass/misc/misc";
-@import "sass/misc/icons";
+@import "sass/base/card";
+
 @import "sass/mindmap/mindmap";
-@import "sass/mindmap/toolbar";
-@import "sass/mindmap/window";
+
+@import "sass/explorer/explorer";
+
