--- a/views/index/index.ejs
+++ b/views/index/index.ejs
@@ -1,28 +1,19 @@
-<div class="panel">
-    <header class="panel__header">
-        <h1>Page d'accueil</h1>
-    </header>
-    <a href="/mm/1"> MindMap 1 !!</a>
-    <form action="/mm/create" method="post">
-        <input type="text" name="name" required/>
-        <input type="submit" value="Créer une mindmap !"/>
-    </form>
-    <section class="panel__content">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet aperiam consequuntur, dolorem inventore
-            minus necessitatibus nihil odio officiis porro quos sunt tenetur totam. Dignissimos dolore doloremque
-            ducimus ipsum possimus quos ratione saepe. Asperiores facere inventore ipsam, itaque laudantium magnam
-            molestias neque nisi ratione tempora. Alias aperiam aut commodi cupiditate deleniti eos laborum minus
-            necessitatibus nostrum, quasi qui repellat repellendus voluptatibus. Aspernatur cumque impedit ipsam
-            maiores maxime provident voluptatum? Beatae dignissimos est facilis, hic natus nulla porro quas sint
-            voluptatibus. Inventore maiores quaerat quo, reiciendis repudiandae velit? A, soluta, voluptatibus.
-            Assumenda, cupiditate dignissimos natus placeat saepe totam vel velit veritatis voluptatibus.</p>
-        <p>Animi atque, blanditiis corporis fugit incidunt itaque iusto laboriosam maiores maxime minima molestias
-            nostrum odit officiis quam quasi quod saepe soluta suscipit, tempora tempore velit vitae voluptatum?
-            Alias architecto debitis dolorem eligendi et eveniet illum in inventore laborum maiores molestiae natus
-            neque nesciunt nihil omnis quae quisquam recusandae repellat rerum saepe similique sint sunt suscipit
-            velit, vero voluptas voluptates. Cupiditate eius facere, incidunt labore omnis quasi quia quos
-            repellendus tempore temporibus totam, ullam voluptatibus. A, cum cupiditate deserunt dolor dolorum et in
-            quibusdam? Aliquid aperiam beatae doloribus earum obcaecati quo sunt voluptates. Doloremque excepturi
-            facere magnam nobis odio sed vero!</p>
-    </section>
-</div>
+<h1 class="center-align">Page d'accueil</h1>
+
+<form action="/mm/create" method="post">
+    <div class="input-field">
+        <input type="text" name="name" required id="input-name"/>
+        <label for="input-name">Mindmap</label>
+    </div>
+    <input type="submit" class="btn waves-effect" value="Créer une mindmap !"/>
+</form>
+
+<p class="justify-align">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci alias, beatae fuga illum
+    nostrum officia perferendis quia tempore ut veritatis. Accusamus accusantium aspernatur deserunt dignissimos
+    dolores ducimus error esse eum impedit modi, numquam, odit officia possimus quidem quos sint sunt unde. Ad
+    asperiores doloribus fugit id impedit quisquam vero voluptas?</p>
+<p class="justify-align">At delectus excepturi facere illo incidunt ipsam laborum maiores odio perferendis
+    perspiciatis possimus quis quo sequi, sit suscipit voluptate voluptates? Aliquam commodi consequuntur dolore
+    ducimus earum enim et, eum, id modi, nostrum odio officiis porro possimus quam repellendus sed velit.
+        Consequatur cumque ex facere impedit modi non officiis quidem totam!</p>
+
