Fix du nom du champ

--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -33,7 +33,7 @@
                             <label for="input-password">Mot de passe</label>
                         </div>
                         <div class="input-field col-xs-12 col-md-6">
-                            <input id="input-password-confirmation" type="password" class="validate" name="password-confirmation">
+                            <input id="input-password-confirmation" type="password" class="validate" name="password_confirmation">
                             <label for="input-password-confirmation">Mot de passe</label>
                         </div>
                     </div>
