CSS spécifique pour un formulaire en validation
Un formulaire ayant la classe "validate", voit ses lignes gagner une
marge basse de 20px, pour laisser de la place aux messages d'erreurs.

--- a/assets/styles/sass/misc/materialize_fixes.scss
+++ b/assets/styles/sass/misc/materialize_fixes.scss
@@ -5,3 +5,20 @@
 .divider {
   margin: 1em 0;
 }
+
+label[data-error]:after {
+  white-space: nowrap;
+}
+
+label {
+  width: 100%;
+}
+
+form.validate .row {
+  margin-bottom: 20px;
+
+  &:nth-last-child(2),
+  &:last-child {
+    margin-bottom: 0;
+  }
+}
