--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -7,39 +7,51 @@
         </div>
     </div>
     <div class="col col-xs-12 col-sm-6 col-md-4">
-
         <div class="card-panel card-signup">
             <h5 class="center-align">Inscription</h5>
-                <form action="/auth/process/signup" method="post">
+                <form class="auth" action="/auth/process/signup" method="post">
+
                     <div class="row">
-                        <div class="input-field col-xs-12 col-md-6">
-                            <input id="input-lastname" type="text" class="validate" name="lastname">
+                        <div class="col input-field col-xs-12">
+                            <input id="input-lastname" type="text" class="validate" name="lastname" required
+                            value="<%= data.inputs.lastname ? data.inputs.lastname : '' %>">
                             <label for="input-lastname">Nom</label>
                         </div>
-                        <div class="input-field col-xs-12 col-md-6">
-                            <input id="input-firstname" type="text" class="validate" name="firstname">
+                    </div>
+
+                    <div class="row">
+                        <div class="col input-field col-xs-12">
+                            <input id="input-firstname" type="text" class="validate" name="firstname" required
+                            value="<%= data.inputs.firstname ? data.inputs.firstname : '' %>">
                             <label for="input-firstname">Prénom</label>
                         </div>
                     </div>
+
                     <div class="row">
-                        <div class="input-field col-xs-12">
-                            <input id="input-email" type="email" class="validate" name="mail">
-                            <label for="input-email">Adresse e-mail</label>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="input-field col-xs-12 col-md-6">
-                            <input id="input-password" type="password" class="validate" name="password">
-                            <label for="input-password">Mot de passe</label>
-                        </div>
-                        <div class="input-field col-xs-12 col-md-6">
-                            <input id="input-password-confirmation" type="password" class="validate" name="password_confirmation">
-                            <label for="input-password-confirmation">Mot de passe</label>
+                        <div class="col input-field col-xs-12">
+                            <input id="input-mail" type="email" class="validate" name="mail" required
+                           value="<%= data.inputs.mail ? data.inputs.mail : '' %>">
+                            <label for="input-mail">Adresse e-mail</label>
                         </div>
                     </div>
 
                     <div class="row">
-                        <div class="col-xs-12 center-align">
+                        <div class="col input-field col-xs-12">
+                            <input id="input-password" type="text" class="validate" name="password" required>
+                            <label for="input-password">Mot de passe</label>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col input-field col-xs-12">
+                            <input id="input-password_confirmation" type="text" class="validate" name="password_confirmation" required>
+                            <label for="input-password_confirmation">Mot de passe</label>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col input-field col-xs-12 center-align">
+                            <div class="divider"></div>
                             <button class="btn blue waves-effect waves-light" type="submit" name="action">S'inscrire
                                 <i class="material-icons right">send</i>
                             </button>
@@ -50,3 +62,10 @@
         </div>
     </div>
 </div>
+<script>
+    var errors = <%- JSON.stringify(data.errors) %>;
+    var formToValidate = 'form.auth';
+    var inputs = 'input';
+</script>
+<% script('/js/ignore/validation.js') %>
+<% script('/js/ignore/initValidation.js') %>
