--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -37,14 +37,14 @@
 
                     <div class="row">
                         <div class="col input-field col-xs-12">
-                            <input id="input-password" type="text" class="validate" name="password" required>
+                            <input id="input-password" type="password" class="validate" name="password" required>
                             <label for="input-password">Mot de passe</label>
                         </div>
                     </div>
 
                     <div class="row">
                         <div class="col input-field col-xs-12">
-                            <input id="input-password_confirmation" type="text" class="validate" name="password_confirmation" required>
+                            <input id="input-password_confirmation" type="password" class="validate" name="password_confirmation" required>
                             <label for="input-password_confirmation">Mot de passe</label>
                         </div>
                     </div>
