Ajout des styles pour les .alert

--- a/assets/styles/importer.scss
+++ b/assets/styles/importer.scss
@@ -21,9 +21,10 @@
 @import "sass/misc/materialize_fixes";
 
 @import "sass/base/base";
-@import "sass/base/navigation";
+@import "sass/base/alert";
 @import "sass/base/buttons";
 @import "sass/base/card";
+@import "sass/base/navigation";
 
 @import "sass/mindmap/mindmap";
 
