--- a/views/partials/flash.ejs
+++ b/views/partials/flash.ejs
@@ -1,7 +1,7 @@
 <% flash = req.flash(); %>
 <% Object.keys(flash).forEach(function(type) { %>
 
-<div class="alert alert-<%- type %>">
+<div class="alert alert-<%- type %>" role="alert">
     <ul>
         <% flash[type].forEach(function(message) { %>
         <li><%= message %></li>
