Fixes sur les formulaires d'authentification et d'inscription

--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -5,19 +5,22 @@
         <div class="card-panel">
             <h5 class="center-align">Connexion via un compte <%= AppName %></h5>
 
-            <form action="/auth/process/login" method="post">
+            <form action="/auth/process/login" method="post" class="login">
                 <div class="row">
-                    <div class="input-field col-xs-12 col-md-6">
-                        <input id="email" type="email" class="validate" name="mail">
+                    <div class="col input-field col-xs-12">
+                        <input id="email" type="email" class="validate" name="mail" required
+                        value="<%= data.inputs.mail ? data.inputs.mail : '' %>">
                         <label for="email">Adresse e-mail</label>
                     </div>
-                    <div class="input-field col-xs-12 col-md-6">
-                        <input id="password" type="password" class="validate" name="password">
+                </div>
+                <div class="row">
+                    <div class="col input-field col-xs-12">
+                        <input id="password" type="password" class="validate" name="password" required>
                         <label for="password">Mot de passe</label>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-xs-12 center-align">
+                    <div class="col col-xs-12 input-field" style="justify-content: center">
                         <button class="btn blue waves-effect waves-light" type="submit" name="action">Se connecter
                             <i class="material-icons right">send</i>
                         </button>
@@ -48,3 +51,12 @@
         </div>
     </div>
 </div>
+
+<script>
+    var errors = <%- JSON.stringify(data.errors) %>;
+    var formToValidate = 'form.login';
+    var inputs = 'input';
+</script>
+<% script('/js/ignore/validation.js') %>
+<% script('/js/ignore/initValidation.js') %>
+
