--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -9,7 +9,7 @@
     <div class="col col-xs-12 col-sm-6 col-md-4">
         <div class="card-panel card-signup">
             <h5 class="center-align">Inscription</h5>
-                <form class="auth" action="/auth/process/signup" method="post">
+                <form class="signup" action="/auth/process/signup" method="post">
 
                     <div class="row">
                         <div class="col input-field col-xs-12">
@@ -50,8 +50,7 @@
                     </div>
 
                     <div class="row">
-                        <div class="col input-field col-xs-12 center-align">
-                            <div class="divider"></div>
+                        <div class="col input-field col-xs-12" style="justify-content: center">
                             <button class="btn blue waves-effect waves-light" type="submit" name="action">S'inscrire
                                 <i class="material-icons right">send</i>
                             </button>
@@ -64,7 +63,7 @@
 </div>
 <script>
     var errors = <%- JSON.stringify(data.errors) %>;
-    var formToValidate = 'form.auth';
+    var formToValidate = 'form.signup';
     var inputs = 'input';
 </script>
 <% script('/js/ignore/validation.js') %>
