--- a/views/layouts/explorer.ejs
+++ b/views/layouts/explorer.ejs
@@ -25,7 +25,7 @@
                 <i class="material-icons">menu</i>
             </a>
 
-            <%- include ../user_navigation %>
+            <%- include ../partials/user_navigation %>
         </div>
     </nav>
 
