--- a/assets/styles/sass/base/card.scss
+++ b/assets/styles/sass/base/card.scss
@@ -13,6 +13,8 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  
+
 
   .card-title {
     font-size: 36px;
@@ -21,4 +23,8 @@
 
 .card-signup {
   width: 100%
+}
+
+.card-panel {
+  height:100%;
 }
