--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -20,7 +20,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col col-xs-12 input-field" style="justify-content: center">
+                    <div class="col col-xs-12 input-field" style="justify-content: center;text-align:center;">
                         <button class="btn blue waves-effect waves-light" type="submit" name="action">Se connecter
                             <i class="material-icons right">send</i>
                         </button>
@@ -46,7 +46,7 @@
         </div>
     </div>
     <div class="col col-xs-12 col-sm-6 col-md-7">
-        <div class="card card-auth-illustration">
+        <div class="card card-panel card-auth-illustration">
             <span class="card-title">Une carte mentale sans réfléchir</span>
         </div>
     </div>
