--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -2,7 +2,7 @@
 
 <div class="row">
     <div class="col col-xs-12 col-sm-6 col-md-8">
-        <div class="card card-auth-illustration">
+        <div class="card card-panel card-auth-illustration">
             <span class="card-title">Explorez les cartes que vous aimez</span>
         </div>
     </div>
@@ -50,7 +50,7 @@
                     </div>
 
                     <div class="row">
-                        <div class="col input-field col-xs-12" style="justify-content: center">
+                        <div class="col input-field col-xs-12" style="justify-content: center;text-align:center;">
                             <button class="btn blue waves-effect waves-light" type="submit" name="action">S'inscrire
                                 <i class="material-icons right">send</i>
                             </button>
