Update mindmap view to fix zoom

--- a/views/layouts/mindmap.ejs
+++ b/views/layouts/mindmap.ejs
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="//cdn.jsdelivr.net/flexboxgrid/6.3.0/flexboxgrid.min.css" type="text/css" >
 </head>
 <body>
-    <nav class="blue">
+    <nav class="blue top-attached">
         <div class="container nav-wrapper">
             <ul class="left">
                 <li>
@@ -28,7 +28,7 @@
         </div>
     </nav>
 
-    <main class="section" style="padding: 0">
+    <main class="section top-attached" style="padding: 0;height:100%;">
         <%- body %>
     </main>
 
